--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -81,7 +81,7 @@ admin_34 : "ғᴀɪʟᴇᴅ ᴛᴏ sᴇᴇᴋ."
 
 # Start
 start_1 : "ᴛʜᴀɴᴋs ғᴏʀ ᴀᴅᴅɪɴɢ ᴍᴇ ɪɴ {0}.\n{1} ᴄᴀɴ ɴᴏᴡ ᴩʟᴀʏ sᴏɴɢs ɪɴ ᴛʜɪs ᴄʜᴀᴛ.\n\nғᴏʀ ɢᴇᴛᴛɪɴɢ ᴀɴʏ ᴛʏᴩᴇ ᴏғ ʜᴇʟᴩ ʏᴏᴜ ᴄᴀɴ ᴊᴏɪɴ ᴏᴜʀ sᴜᴩᴩᴏʀᴛ ɢʀᴏᴜᴩ."
-start_2 : "━━━━━━━━━━━━━━━━━━━━━━━━\n\n💥 وظيفتي تشغيل الوسائط والاغاني في\nالمكالمات الجماعية الخاصة بالمجموعات والقنوات\n\n┏━━━━━━━━━━━━━━━━━┓\n┣★ قناة السورس    : [ᴀsᴀᴅ ᴀʟɪ](https://t.me/ll0llld)\n┣★ سُــــتِۅࢪيُــاެتِ •𓋾𖥆 › : [ᴀʟᴇxᴀ sᴇʀᴠᴇʀ](https://t.me/A1DIIU)┓\n┣★ كروب الدعم › : [ᴀʟᴇxᴀ ᴄʜᴀᴛ](https://t.me/grupmtaem)\n┣★ قناة المطور › : [ɴᴇᴛᴡᴏʀᴋ](https://t.me/L_Q7I)\n┣★ لطلب مساعده من البوت /مساعد\n┗━━━━━━━━━━━━━━━━━┛\n\n💞 ɪғ ʏᴏᴜ ʜᴀᴠᴇ ᴀɴʏ ǫᴜᴇsᴛɪᴏɴs ᴛʜᴇɴ\nᴅᴍ ᴛᴏ ᴍʏ [المبرمج](https://t.me/S_1_02) ...\n\n━━━━━━━━━━━━━━━━━━━━━━━━"
+start_2 : "━━━━━━━━━━━━━━━━━━━━━━━━\n\n💥 وظيفتي تشغيل الوسائط والاغاني في\nالمكالمات الجماعية الخاصة بالمجموعات والقنوات\n\n┏━━━━━━━━━━━━━━━━━┓\n┣★ قناة السورس    : [My channel](https://t.me/ll0llld)\n┣★ سُــــتِۅࢪيُــاެتِ •𓋾𖥆 › : [Stories](https://t.me/A1DIIU)┓\n┣★ كروب الدعم › : [Support Groups](https://t.me/grupmtaem)\n┣★ قناة المطور › : [My love](https://t.me/L_Q7I)\n┣★ لطلب مساعده من البوت /مساعد\n┗━━━━━━━━━━━━━━━━━┛\n\n💞 ɪғ ʏᴏᴜ ʜᴀᴠᴇ ᴀɴʏ ǫᴜᴇsᴛɪᴏɴs ᴛʜᴇɴ\nᴅᴍ ᴛᴏ ᴍʏ [المبرمج](https://t.me/S_1_02) ...\n\n━━━━━━━━━━━━━━━━━━━━━━━━"
 start_3 : "ʜᴇʏ,\n  ᴛʜɪs ɪs {0}\n\nᴀ ғᴀsᴛ ᴀɴᴅ ᴩᴏᴡᴇʀғᴜʟ ᴍᴜsɪᴄ ᴩʟᴀʏᴇʀ ʙᴏᴛ ᴡɪᴛʜ sᴏᴍᴇ ᴀᴡᴇsᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs.\n\nᴀssɪsᴛᴀɴᴛ ᴜsᴇʀɴᴀᴍᴇ:- @{1}\nᴀssɪsᴛᴀɴᴛ ɪᴅ:- {2}"
 start_4 : "ᴛʜᴇ المبرمج ᴏғ {0}, [{1}] ᴊᴜsᴛ ᴊᴏɪɴᴇᴅ ʏᴏᴜʀ ᴄʜᴀᴛ."
 start_5 : "ᴛʜᴇ sᴜᴅᴏ ᴜsᴇʀ ᴏғ {0}, [{1}] ᴊᴜsᴛ ᴊᴏɪɴᴇᴅ ʏᴏᴜʀ ᴄʜᴀᴛ."
